# chalkit

./: LICENSE  README.md  pyproject.toml
chalkit/: editor.py  git_commit.py  main.py  rreset.py  setup.py
tests/: test_idea.py
