[tool.poetry]
name = "chalkit"
version = "0.5.0"
description = ""
authors = ["Anurag-gg <dsanurag520@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
chalkit = "chalkit.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.4.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
